Refactoring and cleanup

--- a/templates/editor_added_entry.html
+++ b/templates/editor_added_entry.html
@@ -51,45 +51,19 @@
 </head>
 
 <body>
-  <img src='logo.png' width='13%'>
-<h1>DeadlineAPI - Endpoint</h1>
+  <img src='/logo.png' width='13%'>
+<h1>DeadlineAPI - Endpoint-Editor</h1>
 
 
 <div class="card" style="width: 100%;">
   <div class="card-body">
-    <h5 class="card-title">Description</h5>
-    <p class="card-text">
-        This is a simple webpage for the <code>endpoint.deadlineapi.org</code> domain. For more information on the DeadlineAPI project see <a href='https://deadlineapi.org'>https://deadlineapi.org</a>.
-    </p>
-  </div>
-</div>
-
-
-<div class="card" style="width: 100%;">
-  <div class="card-body">
-    <h5 class="card-title">Downloads</h5>
-    <p class="card-text">Please find downloads below.</p>
-    <p class="card-text">
-      <ul>
-
-        <li><a href="deadlineapi.json">deadlineapi.json</a> </li>
-        <li><a href="endpointlogo.png">endpointlogo.png</a> </li>
-
-      </ul>
-    </p>
-
+    <h5 class="card-title">Entry successfully added!</h5>
+    <p class="card-text"><a href='/editor'>back</a></p>
   </div>
 </div>
 
 
 
 
-<div class="card" style="width: 100%;">
-  <div class="card-body">
-    <h5 class="card-title">Want to add deadlines to this endpoint?</h5>
-    <p class="card-text">Make PullRequests to <a href="https://github.com/DeadlineAPI/Endpoint">https://github.com/DeadlineAPI/Endpoint</a>.</p>
-
-  </div>
-</div>
 </body>
 </html>
